--- a/src/css/bookmark.scss
+++ b/src/css/bookmark.scss
@@ -1,6 +1,7 @@
 .bookmarkItem{
   border-bottom: 2px solid #f5f5f5;
   padding: 30px 0;
+  position: relative;
   &:last-child{
     border-bottom: none;
   }
@@ -17,11 +18,42 @@
   }
   .bookmark-tag{
     margin-top:0;
-    background-color: #3568BB;
-    padding: 3px;
-    font-size: 75%;
-    color:white;
+    padding:0;
+    display: flex;
+    li.single-tag{
+      background-color: #3568BB;
+      padding: 3px;
+      font-size: 75%;
+      color:white;
+      text-transform: uppercase;
+      margin-right: 7px;
+      padding-right: 20px;
+      background-image: url('../asstes/remove-tag.svg');
+      background-repeat: no-repeat;
+      background-position: right 7px center;
+      cursor: pointer;
+    }
+  }
+  
+  .delete-btn{
+    background: none;
+    border: none;
+    padding:7px;
+    position: absolute;
+    top:50%;
+    transform:translateY(-50%);
+    right:0;
+    color: #c5cbd0;
+    font-weight: 600;
     text-transform: uppercase;
     display: flex;
+    align-items: center;
+    font-size: 75%;
+    &:focus{
+      outline: none;
+    }
+    img{
+      margin-right:5px;
+    }
   }
 }
