--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -10,5 +10,14 @@
   border-radius: 5px;
   padding: 30px;
 }
+.action-buttons{
+  background: none;
+  border: none;
+  padding:7px;
+  &:focus{
+    outline: none;
+  }
+}
 
-@import 'bookmark.scss'
+@import 'bookmark.scss';
+@import 'input.scss';
